31 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * backend/clarin/app/Models/Annotation.php:
 * backend/clarin/app/Models/TempAnnotation.php: Added new fields in
 annotations ('collection_setting', 'document_setting').

30 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend/clarin/app/Http/Controllers/DocumentController.php:
 * clarin-angular/src/app/components/dialogs/add-documents-dialog/add-documents-dialog.component.html:
 * clarin-angular/src/assets/data/menu.json: Fixed a bug during adding
 Documents.

 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * clarin-angular/src/app/components/controls/base-control/base-control.component.ts:
 Fixed a bug in ObjectId() generation, and storing single annotations in
 backend.

 * clarin-angular/src/app/ng-matero/theme/sidemenu/accordion.directive.ts:
 * clarin-angular/src/app/ng-matero/core/bootstrap/menu.service.ts: Fixes in
 ng-matero to respect the /app prefix in sidemenu.

 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/ng-matero/core/bootstrap/startup.service.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json: Added titles in page headers.

29 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.html:
 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.ts:
 Change to emmit event to parent, on some toolbar buttons (i.e. Change